# solana-accountsdb-plugin-kafka

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
ci/: cargo-build-test.sh  create-tarball.sh  rust-version.sh  solana-version.sh
proto/: event.proto
scripts/: update-rust-toolchain.sh
src/: config.rs  confirmed_accounts.rs  event.rs  filter.rs  lib.rs  plugin.rs  prom.rs  publisher.rs  version.rs
src/server/: mod.rs  prom.rs  subscriptions.rs
