[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
authors = ["Blockdaemon"]
version = "0.2.2+agave.4.0.0-alpha.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Blockdaemon/solana-accountsdb-plugin-kafka"
homepage = "https://blockdaemon.com"
keywords = ["solana", "blockchain", "kafka", "plugin"]
categories = ["cryptography::cryptocurrencies", "database", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = { version = "4.0.0-alpha.0" }
solana-message = { version = "~3.1" }
solana-pubkey = { version = "~4.1" }
solana-transaction-status = { version = "4.0.0-alpha.0" }
solana-transaction-status-client-types = { version = "4.0.0-alpha.0" }

bytes = "*"
env_logger = "*"
http = "*"
http-body-util = "*"
hyper = { version = "*", features = ["http1", "server"] }
hyper-util = { version = "*", features = ["tokio", "server"] }
lazy_static = "*"
log = "*"
prometheus = "*"
prost = "*"
rdkafka = { version = "*", features = ["ssl", "sasl"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread", "time", "macros", "sync", "net"] }
tower = { version = "*", features = ["make"] }

[build-dependencies]
anyhow = "*"
cargo-lock = "*"
git-version = "*"
prost-build = "*"
vergen = { version = "*", features = ["build", "rustc"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
