[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
authors = ["Blockdaemon"]
version = "0.2.2+agave.4.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Blockdaemon/solana-accountsdb-plugin-kafka"
homepage = "https://blockdaemon.com"
keywords = ["solana", "blockchain", "kafka", "plugin"]
categories = ["cryptography::cryptocurrencies", "database", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = { version = "~4" }
agave-logger = { version = "*", features = ["agave-unstable-api"] }
solana-message = { version = "~3.1" }
solana-pubkey = { version = "*" }
solana-transaction-status = { version = "*" }
solana-transaction-status-client-types = { version = "*" }

bytes = "*"
http = "*"
http-body-util = "*"
hyper = { version = "*", features = ["http1", "server"] }
hyper-util = { version = "*", features = ["tokio", "server"] }
lazy_static = "*"
log = "*"
prometheus = "*"
prost = "*"
rdkafka = { version = "*", features = ["ssl", "sasl"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread", "time", "macros", "sync", "net"] }
tower = { version = "*", features = ["make"] }

[build-dependencies]
anyhow = "*"
cargo-lock = "*"
git-version = "*"
prost-build = "*"
vergen = { version = "9", features = ["build", "rustc"] } # newer versions of vergen require rust 1.96

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
