[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
authors = ["Blockdaemon"]
version = "0.2.3+agave.4.1.0-beta.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Blockdaemon/solana-accountsdb-plugin-kafka"
homepage = "https://blockdaemon.com"
keywords = ["solana", "blockchain", "kafka", "plugin"]
categories = ["cryptography::cryptocurrencies", "database", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = { version = "4.1.0-beta.3" }
agave-logger = { version = "*", features = ["agave-unstable-api"] }
solana-message = { version = "*" }
solana-pubkey = { version = "*" }
# Pinned to match agave-geyser-plugin-interface; a bare "*" excludes pre-releases
# and resolves to 3.1.x, which duplicates solana-message (3.1.0 vs 4.2.1).
solana-transaction-status = { version = "=4.1.0-beta.3" }
solana-transaction-status-client-types = { version = "=4.1.0-beta.3" }

bytes = "*"
http = "*"
http-body-util = "*"
hyper = { version = "*", features = ["http1", "server"] }
hyper-util = { version = "*", features = ["tokio", "server"] }
lazy_static = "*"
log = "*"
prometheus = "*"
prost = "*"
rdkafka = { version = "*", features = ["ssl", "sasl"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread", "time", "macros", "sync", "net"] }
tower = { version = "*", features = ["make"] }

[build-dependencies]
anyhow = "*"
cargo-lock = "*"
git-version = "*"
prost-build = "*"
vergen = { version = "9", features = ["build", "rustc"] } # newer versions of vergen require rust 1.106

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
